# dbbackup_flow

./: .gitignore  AGENTS.md  Dockerfile  README.md  justfile  main.py  prefect.yaml  pyproject.toml  requirements.txt  setup_secrets.sh
dbbackup_flow/: __init__.py
dbbackup_flow/flows/: pg_s3_backup.py
k8s/: README.md  rbac.yaml
scripts/: create-k8s-secret.sh  setup_secrets.sh
