[project]
name = "dbbackup-flow"
version = "0.1.0"
description = "Prefect flow for PostgreSQL backup to S3 using Kubernetes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "prefect-kubernetes>=0.7.2",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "prefect>=3.6.10",
    "ruff>=0.14.11",
]
